# m4opt-observing-scenarios

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: schedule-absmag-distribution.py
