[project]
name = "m4opt-paper"
version = "0.0.0"
description = "UVEX EMGW observing scenarios"
authors = [
    {name = "Leo Singer",email = "leo.p.singer@nasa.gov"}
]
# FIXME: CPLEX does not yet support Python 3.15 and newer.
requires-python = ">=3.12, <3.15"
dependencies = [
    "dask-jobqueue",
    "dask[diagnostics]",
    "ipykernel",
    "ipython",
    "m4opt >=2.6.0",
]

[tool.codespell]
ignore-words-list = """
    multline,
    ToO,
    ToOs,
"""
skip = """
    m4opt.bib,
    poetry.lock,
    Makefile,
"""
